Use headers instead of body to pass the parameters
